@@ -1,3 +1,10 @@
+2003-03-24  Miguel Sofer <msofer@users.sf.net>
+
+	* generic/tclVar.c:
+	* tests/var.test: fixing ObjMakeUpvar's lookup algorithm for the
+	created local variable, bugs #631741 (Chris Darroch) and #696893
+	(David Hilker). 
+	
 2003-03-24  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* library/dde/pkgIndex.tcl: bumped version to 1.2.2 in tclWinDde.c,
